# UBahnSimBerlinInstaller

./: LICENSE.txt  README.md  index.py  index.spec  pyproject.toml
installer/: __init__.py  api.py  installer.py  utils.py  winforms.py
installer/downloader/: __init__.py  client.py
installer/static/: keyboard_de.txt  keyboard_en.txt
installer/templates/: index.html
installer/templates/static/js/: app.js
installer/templates/views/: install.html  installed.html  landing.html  resume.html
installer/templates/views/errors/: pywebview.html
installer/templates/views/update/: check.html
installer/trainz/: __init__.py  patcher.py  trainzutil.py
usb_installer/: __init__.py  api.py  config.py  installer.py  winforms.py
usb_installer/downloader/: client.py
usb_installer/templates/: index.html
usb_installer/templates/static/css/: fontawesome.min.css
usb_installer/templates/static/js/: app.js
usb_installer/templates/views/: progress.html
usb_installer/templates/views/errors/: error.html  nointernet.html  pywebview.html  success.html  trainzrunning.html  warning.html
usb_installer/templates/views/update/: available.html
usb_installer/trainz/: trainzconfig.py  trainzutil.py
