[tool.poetry]
name = "usb_installer"
version = "1.4.0"
description = ""
authors = ["David Sn <divad.nnamtdeis@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
appdirs = "^1.4.4"
chardet = "^5.2.0"
psutil = "^6.0"
pillow = "^10.4.0"
pydantic = "^2.9.2"
pyinstaller = "^6.10.0"
pythonnet = "^3.0.4"
pywebview = "5.1"
requests = "^2.32.2"
sqlalchemy = "^2.0.35"
wmi = "^1.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
